[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[project]
name = "utt"
version = "0"
description = "A simple command-line time tracker"
authors = [{ name = "Mathieu Larose", email = "mathieu@mathieularose.com" }]
requires-python = ">=3.8.1,<4"
license = "GPL-3.0-only"
maintainers = [{ name = "Mathieu Larose", email = "mathieu@mathieularose.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "argcomplete>=3.2.1,<4",
    "cargo>=0.3,<0.4",
    "python_dateutil>=2.8.1,<3",
    "pytz>=2023.3.post1,<2024",
    "tzlocal>=5.2,<6",
]

[project.urls]
Homepage = "https://github.com/larose/utt"

[project.scripts]
utt = "utt.__main__:main"

[dependency-groups]
dev = [
    "black>=23.12.1,<24",
    "ddt>=1.7.1,<2",
    "flake8>=7.0.0,<8",
    "isort>=5.13.2,<6",
    "mypy>=1.8.0,<2",
    "pytest>=7.4.4,<8",
    "requests>=2.31.0,<3",
]

[tool.black]
line-length = 120

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[tool.isort]
profile = "black"
line_length = 120
